--- a/rsc.qrc
+++ b/rsc.qrc
@@ -4,5 +4,6 @@
         <file>res/faces.bmp</file>
         <file>res/frame.bmp</file>
         <file>res/timenumber.bmp</file>
+        <file>res/background.jpg</file>
     </qresource>
 </RCC>
