--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -14,11 +14,18 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
+   <property name="styleSheet">
+    <string notr="true">QDialog{ 
+background-color: 	#b9e3f7 ;
+color: #007dff;
+border-radius: 15px;
+}</string>
+   </property>
    <widget class="QPushButton" name="pushButton">
     <property name="geometry">
      <rect>
       <x>320</x>
-      <y>150</y>
+      <y>180</y>
       <width>151</width>
       <height>31</height>
      </rect>
@@ -119,7 +126,7 @@ color: #000000;
      <string/>
     </property>
     <property name="pixmap">
-     <pixmap>res/bg.jpg</pixmap>
+     <pixmap>res/background.jpg</pixmap>
     </property>
     <property name="scaledContents">
      <bool>true</bool>
@@ -159,7 +166,7 @@ border-radius: 15px;
     <property name="geometry">
      <rect>
       <x>320</x>
-      <y>220</y>
+      <y>230</y>
       <width>151</width>
       <height>31</height>
      </rect>
@@ -198,7 +205,7 @@ color: #000000;
 </string>
     </property>
     <property name="text">
-     <string>About </string>
+     <string>ABOUT</string>
     </property>
    </widget>
    <zorder>label</zorder>
@@ -213,7 +220,7 @@ color: #000000;
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>36</height>
+     <height>24</height>
     </rect>
    </property>
   </widget>
