--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -132,7 +132,7 @@ color: #000000;
      <bool>true</bool>
     </property>
    </widget>
-   <widget class="QLabel" name="label_2">
+   <widget class="QLabel" name="Title">
     <property name="geometry">
      <rect>
       <x>140</x>
@@ -211,7 +211,7 @@ color: #000000;
    <zorder>label</zorder>
    <zorder>Start_Button</zorder>
    <zorder>Quit_Button</zorder>
-   <zorder>label_2</zorder>
+   <zorder>Title</zorder>
    <zorder>About_Button</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
