--- a/about.ui
+++ b/about.ui
@@ -58,19 +58,19 @@ border-radius: 15px;
    <property name="styleSheet">
     <string notr="true">QPushButton{ 
 border-radius: 15px;
-border-right: 1px solid #ADD8E6;
-border-bottom: 1px solid #ADD8E6;
+border-right: 3px solid #003366;
+border-bottom: 3px solid #003366;
 }
 QPushButton:enabled{
-background-color: #4169e1;
+background-color: #0059b3;
 color: white;
 }
 QPushButton:pressed{
-background-color: #000080;
+background-color: #040273;
 color: white;
 }
 QPushButton:hover:!pressed{
-background-color: #4169e1;
+background-color: #0059b3;
 color: white;
 }
 QPushButton:disabled{
