--- a/menu.ui
+++ b/menu.ui
@@ -6,18 +6,25 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>488</width>
+    <height>386</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">QDialog{ 
+background-color: 	#b9e3f7 ;
+color: #007dff;
+border-radius: 15px;
+}</string>
+  </property>
   <widget class="QPushButton" name="newgame_Button">
    <property name="geometry">
     <rect>
-     <x>120</x>
-     <y>80</y>
+     <x>170</x>
+     <y>150</y>
      <width>151</width>
      <height>32</height>
     </rect>
@@ -62,8 +69,8 @@ color: #000000;
   <widget class="QPushButton" name="about_Button">
    <property name="geometry">
     <rect>
-     <x>120</x>
-     <y>130</y>
+     <x>170</x>
+     <y>200</y>
      <width>151</width>
      <height>32</height>
     </rect>
@@ -108,8 +115,8 @@ color: #000000;
   <widget class="QPushButton" name="About_Button">
    <property name="geometry">
     <rect>
-     <x>120</x>
-     <y>190</y>
+     <x>170</x>
+     <y>250</y>
      <width>151</width>
      <height>31</height>
     </rect>
@@ -154,8 +161,8 @@ color: #000000;
   <widget class="QPushButton" name="Quit_Button">
    <property name="geometry">
     <rect>
-     <x>120</x>
-     <y>240</y>
+     <x>170</x>
+     <y>300</y>
      <width>151</width>
      <height>31</height>
     </rect>
@@ -239,6 +246,36 @@ color: #000000;
    </property>
    <property name="text">
     <string>Back</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>170</x>
+     <y>50</y>
+     <width>151</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Baskerville</family>
+     <pointsize>30</pointsize>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QLabel{ 
+background-color: #FFFFFF;
+color: #007dff;
+border-radius: 15px;
+}
+
+
+</string>
+   </property>
+   <property name="text">
+    <string>     Menu</string>
    </property>
   </widget>
  </widget>
