--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,12 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>666</width>
+    <width>580</width>
     <height>600</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
+  </property>
+  <property name="styleSheet">
+   <string notr="true"/>
   </property>
   <widget class="QWidget" name="centralwidget">
    <property name="styleSheet">
@@ -24,8 +27,8 @@ border-radius: 15px;
    <widget class="QPushButton" name="Start_Button">
     <property name="geometry">
      <rect>
-      <x>240</x>
-      <y>420</y>
+      <x>200</x>
+      <y>290</y>
       <width>171</width>
       <height>41</height>
      </rect>
@@ -71,10 +74,14 @@ color: #000000;
     <property name="geometry">
      <rect>
       <x>0</x>
-      <y>40</y>
-      <width>661</width>
-      <height>501</height>
+      <y>20</y>
+      <width>581</width>
+      <height>531</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgba(118, 214, 255, 115);
+</string>
     </property>
     <property name="text">
      <string/>
@@ -89,16 +96,16 @@ color: #000000;
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>70</x>
-      <y>0</y>
-      <width>501</width>
-      <height>41</height>
+      <x>10</x>
+      <y>30</y>
+      <width>561</width>
+      <height>71</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <family>Georgia</family>
-      <pointsize>26</pointsize>
+      <pointsize>30</pointsize>
       <bold>true</bold>
      </font>
     </property>
@@ -113,7 +120,7 @@ border-radius: 15px;
 </string>
     </property>
     <property name="text">
-     <string>    Minesweeper With Treasure Hunt</string>
+     <string>  Minesweeper With Treasure Hunt</string>
     </property>
    </widget>
    <zorder>label</zorder>
@@ -125,7 +132,7 @@ border-radius: 15px;
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>666</width>
+     <width>580</width>
      <height>24</height>
     </rect>
    </property>
